--- a/Books/SupportingFiles/Localizable.xcstrings
+++ b/Books/SupportingFiles/Localizable.xcstrings
@@ -1,5 +1,15 @@
 {
   "sourceLanguage" : "en",
-  "strings" : {},
+  "strings" : {
+    "Favorites" : {
+
+    },
+    "Home" : {
+
+    },
+    "Screen 2" : {
+
+    }
+  },
   "version" : "1.0"
 }
