Add home screen views

--- a/Books/SupportingFiles/Localizable.xcstrings
+++ b/Books/SupportingFiles/Localizable.xcstrings
@@ -1,6 +1,17 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
+    "booksTitle" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Books"
+          }
+        }
+      }
+    },
     "Detail" : {
 
     },
@@ -15,6 +26,17 @@
     },
     "Search" : {
 
+    },
+    "sortBooksTitle" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Sort Books"
+          }
+        }
+      }
     }
   },
   "version" : "1.0"
