Add error view and view state to home screen

--- a/Books/SupportingFiles/Localizable.xcstrings
+++ b/Books/SupportingFiles/Localizable.xcstrings
@@ -81,6 +81,17 @@
         }
       }
     },
+    "noMoreBooks" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "No more books available"
+          }
+        }
+      }
+    },
     "publishedDate" : {
       "extractionState" : "manual",
       "localizations" : {
